# apb

./: .gitignore  CHANGELOG.md  PKGBUILD  README-PACKAGING.md  README.md  apb-farm.py  apb-server.py  apb.install  apb.json  apb.json.example  apb.py  apb.sudoers  apb.sysusers  apb.tmpfiles  nginx-apb-farm.conf  pyproject.toml  requirements.txt
doc/: apb-client-api.md  apb-farm-api.md  apb-server-api.md
src/apb/: __init__.py  arch.py  config.py  constants.py  http.py  multipart_compat.py  pkgbuild.py  srcinfo.py  tarball.py
src/apb/client/: __init__.py  api.py  auth.py  cli.py  helpers.py
src/apb/farm/: __init__.py  app.py  cli.py  core.py  proxy.py  routes.py
src/apb/models/: __init__.py
src/apb/server/: __init__.py  app.py  cli.py  engine.py  routes.py
src/apb/web/: __init__.py
src/apb/web/static/: style.css
src/apb/web/templates/: base.html
test/: README.md  apb-test.json  cleanup.sh  run-test.sh
test/test-package/: PKGBUILD  test-script.sh
tests/: conftest.py  run-integration.sh  test_build_apb_integration.py  test_build_log.py  test_client_helpers.py  test_farm_pkgname_builds.py  test_farm_queue.py  test_multipart_compat.py  test_pkgbuild.py  test_process_output.py  test_runtime_deps.py  test_srcinfo.py  test_tarball.py
tests/fixtures/test-package/: .SRCINFO  PKGBUILD  test-script.sh
