[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apb"
version = "2026.06.30"
description = "Arch Package Builder - distributed package building system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
]

[project.scripts]
apb = "apb.client.cli:main"
apb-farm = "apb.farm.cli:main"
apb-server = "apb.server.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: end-to-end APB build tests (requires Linux, Arch tools, APB_INTEGRATION=1)",
]
